fix(client-mod): 移除 shared 中的新版本 Java API